syntax = "proto3";

package rbc;
message Payload{
    string merkle_root = 1;
    repeated string merkle_branch = 2;
    bytes data = 3;
}

message PrepareResponse{}

message EchoResponse{}

message ReadyRequest{
    string merkle_root = 1;
}

message ReadyResponse{}

service Prepare{
    rpc Prepare(Payload) returns (PrepareResponse) {}
}

service Echo{
    rpc Echo(Payload) returns (EchoResponse) {}
}

service Ready{
    rpc Ready(ReadyRequest) returns (ReadyResponse) {}
}

